--- a/map.html
+++ b/map.html
@@ -2,55 +2,60 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Interactive Map — Tennessee</title>
-  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-3">
-  <script defer src="/sports-fansite/assets/js/app.js?v=2025-08-30-3"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Map & Live Traffic • Tennessee Gameday Hub</title>
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30-10">
 </head>
 <body>
-<header class="siteHeader">
-  <div class="wrap">
-    <a class="brand" href="/sports-fansite/"><span class="logo">TN</span><span class="brandText">Tennessee</span></a>
-    <nav class="primaryNav">
-      <a href="/sports-fansite/schedule.html">Schedule</a>
-      <a href="/sports-fansite/specials.html">Specials</a>
-      <a href="/sports-fansite/map.html">Map</a>
-      <a href="/sports-fansite/guide.html">Guide</a>
+<header class="site-header">
+  <div class="header-inner">
+    <a class="brand" href="index.html"><span class="badge">TN</span> <span>Tennessee</span></a>
+    <nav class="nav">
+      <a href="schedule.html">Schedule</a>
+      <a href="specials.html">Specials</a>
+      <a href="map.html">Map</a>
+      <a href="guide.html">Guide</a>
     </nav>
-    <div id="countdown" class="countdown">
-      <span class="pill" id="cd-days">00</span><span class="pill" id="cd-hrs">00</span><span class="pill" id="cd-min">00</span><span class="pill" id="cd-sec">00</span>
-    </div>
-    <a class="btnPrimary" href="/sports-fansite/submit.html">Submit</a>
+    <div id="countdown"><span class="pill" id="cd-days">00</span><span class="pill" id="cd-hrs">00</span><span class="pill" id="cd-min">00</span><span class="pill" id="cd-sec">00</span></div>
   </div>
 </header>
 
-<main class="wrapMain pageGrid">
-  <section class="stack">
+<main class="wrap layout">
+  <section class="main">
     <article class="card">
-      <h2>Interactive map</h2>
-      <iframe title="Map" src="https://www.openstreetmap.org/export/embed.html?bbox=-83.98,35.92,-83.87,35.99&layer=mapnik"
-        width="100%" height="360" style="border:0; border-radius:12px;"></iframe>
-      <p><a class="muted" target="_blank" href="https://www.openstreetmap.org/#map=13/35.955/-83.925">Open full map</a></p>
+      <div class="head">Interactive map</div>
+      <div class="body">
+        <iframe class="map-embed"
+          src="https://www.openstreetmap.org/export/embed.html?bbox=-83.945%2C35.945%2C-83.905%2C35.965&layer=mapnik&marker=35.955%2C-83.925"></iframe>
+        <p class="kicker"><a target="_blank" rel="noopener" href="https://www.openstreetmap.org/?mlat=35.955&mlon=-83.925#map=14/35.955/-83.925">Open full map</a></p>
+      </div>
     </article>
   </section>
 
   <aside class="rail">
     <article class="card">
-      <h2>Quick links</h2>
-      <ul>
-        <li><a href="/sports-fansite/guide.html">Guide</a></li>
-        <li><a href="/sports-fansite/specials.html">Specials</a></li>
-        <li><a href="/sports-fansite/schedule.html">Schedule</a></li>
-        <li><a href="/sports-fansite/submit.html">Submit a listing</a></li>
-      </ul>
+      <div class="head">Quick links</div>
+      <div class="body kicker">
+        <ul style="margin:0; padding-left:18px;">
+          <li><a href="guide.html">Guide</a></li>
+          <li><a href="specials.html">Specials</a></li>
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="submit.html">Submit a listing</a></li>
+        </ul>
+      </div>
     </article>
+
     <article class="card">
-      <h2>Live traffic (Waze)</h2>
-      <iframe title="Waze" src="https://embed.waze.com/iframe?zoom=14&lat=35.955&lon=-83.925&pin=1" width="100%" height="260" style="border:0; border-radius:12px;"></iframe>
+      <div class="head">Live traffic (Waze)</div>
+      <div class="body">
+        <iframe class="waze-embed"
+          src="https://embed.waze.com/iframe?zoom=14&lat=35.955&lon=-83.925&pin=1" allowfullscreen></iframe>
+      </div>
     </article>
   </aside>
 </main>
 
-<footer class="footer"><div class="inner">Unofficial fan resource.</div></footer>
+<footer class="site-footer"><div class="wrap muted">Unofficial fan resource.</div></footer>
+<script src="assets/js/app.js?v=2025-08-30-10"></script>
 </body>
 </html>
