--- a/guide.html
+++ b/guide.html
@@ -1,100 +1,110 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Gameday Guide — Tennessee</title>
-  <link rel="stylesheet" href="/sports-fansite/assets/css/styles.css?v=2025-08-30-3">
-  <script defer src="/sports-fansite/assets/js/app.js?v=2025-08-30-3"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Gameday Guide • Tennessee Gameday Hub</title>
+  <link rel="stylesheet" href="assets/css/styles.css?v=2025-08-30-10">
 </head>
 <body>
-<header class="siteHeader">
-  <div class="wrap">
-    <a class="brand" href="/sports-fansite/"><span class="logo">TN</span><span class="brandText">Tennessee</span></a>
-    <nav class="primaryNav">
-      <a href="/sports-fansite/schedule.html">Schedule</a>
-      <a href="/sports-fansite/specials.html">Specials</a>
-      <a href="/sports-fansite/map.html">Map</a>
-      <a href="/sports-fansite/guide.html">Guide</a>
+<header class="site-header">
+  <div class="header-inner">
+    <a class="brand" href="index.html"><span class="badge">TN</span> <span>Tennessee</span></a>
+    <nav class="nav">
+      <a href="schedule.html">Schedule</a>
+      <a href="specials.html">Specials</a>
+      <a href="map.html">Map</a>
+      <a href="guide.html">Guide</a>
     </nav>
-    <div id="countdown" class="countdown">
-      <span class="pill" id="cd-days">00</span><span class="pill" id="cd-hrs">00</span><span class="pill" id="cd-min">00</span><span class="pill" id="cd-sec">00</span>
-    </div>
-    <a class="btnPrimary" href="/sports-fansite/submit.html">Submit</a>
+    <div id="countdown"><span class="pill" id="cd-days">00</span><span class="pill" id="cd-hrs">00</span><span class="pill" id="cd-min">00</span><span class="pill" id="cd-sec">00</span></div>
   </div>
 </header>
 
-<main class="wrapMain pageGrid">
-  <section class="homeGrid">
-    <article class="card span-12">
-      <h2>Gameday Guide</h2>
-      <p class="muted">Everything you need for game weekend in Knoxville—before, during, and after kickoff.</p>
+<main class="wrap layout">
+  <section class="main">
+    <article class="card">
+      <div class="head">Gameday Guide</div>
+      <div class="body kicker">Everything you need for game weekend in Knoxville—before, during, and after kickoff.</div>
     </article>
 
-    <article class="card span-4">
-      <h3>Pre-game</h3>
-      <ul>
-        <li><b>Book early, plan early.</b> Hotels & rentals sell out. Make a Plan B in nearby towns.</li>
-        <li><b>Where to stay.</b> Downtown & campus first; also West Knoxville, Cedar Bluff, Farragut, Alcoa/Maryville.</li>
-        <li><b>Plan B towns.</b> Oak Ridge, Sevierville, Pigeon Forge, Lenoir City, Clinton, Maryville, Jefferson City, Dandridge, Newport.</li>
-        <li><b>Traffic.</b> Check live map and Waze before you move.</li>
-        <li><b>Pack list.</b> IDs, mobile tickets, chargers, meds, water, ponchos, sunscreen, snacks.</li>
-      </ul>
+    <article class="card">
+      <div class="head">Pre-game</div>
+      <div class="body">
+        <ul>
+          <li><b>Book early, plan early.</b> Hotels & rentals sell out. Make a Plan B in nearby towns.</li>
+          <li><b>Where to stay.</b> Downtown & campus first; also West Knoxville, Cedar Bluff, Farragut, Alcoa/Maryville.</li>
+          <li><b>Plan B towns.</b> Oak Ridge, Sevierville, Pigeon Forge, Lenoir City, Clinton, Maryville, Jefferson City, Dandridge, Newport.</li>
+          <li><b>Traffic.</b> Check the live map and Waze before you move.</li>
+          <li><b>Pack list.</b> IDs, mobile tickets, chargers, meds, water, ponchos, sunscreen, snacks. Ear protection for little ones.</li>
+        </ul>
+      </div>
     </article>
 
-    <article class="card span-4">
-      <h3>Game-time</h3>
-      <ul>
-        <li>Hydration: refill stations at main concourses.</li>
-        <li>Night games can get breezy—layer up.</li>
-        <li>Mobile tickets: open your wallet before scanners.</li>
-        <li>Watch our Live Score Box on the home page for in-game updates.</li>
-      </ul>
+    <article class="card">
+      <div class="head">Game-time</div>
+      <div class="body">
+        <ul>
+          <li>Hydration: refill stations at main concourses.</li>
+          <li>Night games can get breezy—layer up.</li>
+          <li>Mobile tickets: open the wallet before the scanners to avoid bottlenecks.</li>
+          <li>Concessions: grab at end-of-quarter to beat halftime rush.</li>
+          <li>Watch our Live Score Box on the home page for in-game updates.</li>
+        </ul>
+      </div>
     </article>
 
-    <article class="card span-4">
-      <h3>Post-game</h3>
-      <ul>
-        <li>Wait 20–30 minutes if parked close—saves time overall.</li>
-        <li>Use side streets or river route when open to beat main flow.</li>
-        <li>Walk outside control points before calling rideshare.</li>
-        <li><b>24/7 food:</b> we’ll curate a list; submit spots on the listings page.</li>
-      </ul>
+    <article class="card">
+      <div class="head">Post-game</div>
+      <div class="body">
+        <ul>
+          <li>Wait 20–30 minutes if parked close—saves time overall.</li>
+          <li>Use side streets or river route when open to beat main flow.</li>
+          <li>Walk outside control points before calling rideshare.</li>
+          <li>24/7 food: we’ll curate a list; submit spots on the listings page.</li>
+        </ul>
+      </div>
     </article>
 
-    <article class="card span-8">
-      <h3>Emergency & Visitor Info</h3>
-      <ul>
-        <li>Emergency: 911 — UT Police: (865) 974-3111 — City non-emergency: (865) 215-7450.</li>
-        <li>First-aid stations located on main concourses; look for posted signs.</li>
-        <li>Accessibility: elevators & accessible routes are signed; staff can guide you.</li>
-      </ul>
-    </article>
-
-    <article class="card span-4" id="weather">
-      <h3>Weather now</h3>
-      <ul id="weatherList"><li>—</li></ul>
-      <p class="muted" id="weatherNote">—</p>
+    <article class="card">
+      <div class="head">Emergency & Visitor Info</div>
+      <div class="body">
+        <ul>
+          <li>Emergency: 911 — UT Police: (865) 974-3111 — City non-emergency: (865) 215-7450.</li>
+          <li>First-aid stations located on main concourses; look for posted signs.</li>
+          <li>Accessibility: elevators & accessible routes are signed; staff can guide you.</li>
+        </ul>
+      </div>
     </article>
   </section>
 
   <aside class="rail">
     <article class="card">
-      <h3>Traffic & Map</h3>
-      <iframe title="Waze" src="https://embed.waze.com/iframe?zoom=14&lat=35.955&lon=-83.925&pin=1" width="100%" height="260" style="border:0; border-radius:12px;"></iframe>
+      <div class="head">Weather now</div>
+      <div class="body kicker" id="weatherNow">—</div>
     </article>
+
     <article class="card">
-      <h3>Quick links</h3>
-      <ul>
-        <li><a href="/sports-fansite/schedule.html">Schedule</a></li>
-        <li><a href="/sports-fansite/map.html">Map</a></li>
-        <li><a href="/sports-fansite/specials.html">Specials</a></li>
-        <li><a href="/sports-fansite/submit.html">Submit a listing</a></li>
-      </ul>
+      <div class="head">Traffic & Map</div>
+      <div class="body">
+        <iframe class="waze-embed" src="https://embed.waze.com/iframe?zoom=14&lat=35.955&lon=-83.925&pin=1" allowfullscreen></iframe>
+      </div>
+    </article>
+
+    <article class="card">
+      <div class="head">Quick links</div>
+      <div class="body kicker">
+        <ul style="margin:0; padding-left:18px;">
+          <li><a href="schedule.html">Schedule</a></li>
+          <li><a href="map.html">Map</a></li>
+          <li><a href="specials.html">Specials</a></li>
+          <li><a href="submit.html">Submit a listing</a></li>
+        </ul>
+      </div>
     </article>
   </aside>
 </main>
 
-<footer class="footer"><div class="inner">Unofficial fan resource.</div></footer>
+<footer class="site-footer"><div class="wrap muted">Unofficial fan resource.</div></footer>
+<script src="assets/js/app.js?v=2025-08-30-10"></script>
 </body>
 </html>
